nueva ventana de pago

--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -12,7 +12,7 @@
         android:layout_width="@dimen/fab_width"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimension_124"
-        android:text="@string/name"
+        android:hint="@string/name"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/email"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +22,7 @@
         android:id="@+id/email"
         android:layout_width="@dimen/fab_width"
         android:layout_height="wrap_content"
-        android:text="@string/email"
+        android:hint="@string/email"
         app:layout_constraintTop_toBottomOf="@id/name_Login"
         app:layout_constraintBottom_toTopOf="@id/password_Acces"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +32,7 @@
         android:id="@+id/password_Acces"
         android:layout_width="@dimen/fab_width"
         android:layout_height="wrap_content"
-        android:text="@string/passwordA"
+        android:hint="@string/passwordA"
         app:layout_constraintTop_toBottomOf="@id/email"
         app:layout_constraintBottom_toTopOf="@id/password_Acces2"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,7 +42,7 @@
         android:id="@+id/password_Acces2"
         android:layout_width="@dimen/fab_width"
         android:layout_height="wrap_content"
-        android:text="@string/conf_pass"
+        android:hint="@string/conf_pass"
         app:layout_constraintTop_toBottomOf="@id/password_Acces"
         app:layout_constraintBottom_toTopOf="@id/crear_Cuenta"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,7 @@
         android:layout_height="@dimen/dimension_56"
         android:text="@string/crear_cuent"
         android:textColor="@color/background"
-        android:background="@drawable/rounded_corners"
+        android:background="@drawable/red_button"
         app:layout_constraintTop_toBottomOf="@id/password_Acces2"
         app:layout_constraintBottom_toTopOf="@id/cancelar_Cuenta"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
         android:layout_height="@dimen/dimension_40"
         android:text="@string/cancelar"
         android:textColor="@color/background"
-        android:background="@drawable/rounded_corners"
+        android:background="@drawable/red_button"
         android:layout_marginBottom="@dimen/dimension_124"
         app:layout_constraintTop_toBottomOf="@id/crear_Cuenta"
         app:layout_constraintBottom_toBottomOf="parent"
