--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="dimension_56">56dp</dimen>
     <dimen name="dimension_144">144dp</dimen>
     <dimen name="fab_marginx4">64dp</dimen>
+    <dimen name="dimension_48">48dp</dimen>
 </resources>
