--- a/app/src/main/res/layout/config_page.xml
+++ b/app/src/main/res/layout/config_page.xml
@@ -25,7 +25,7 @@
         android:layout_width="@dimen/dimension_336"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/fab_marginx4"
-        android:background="@drawable/rounded_corners"
+        android:background="@drawable/red_button"
         android:text="@string/logout"
         android:textColor="@color/background"
         app:layout_constraintBottom_toBottomOf="parent"
