--- a/app/src/main/res/layout/fragment_crear_pizza.xml
+++ b/app/src/main/res/layout/fragment_crear_pizza.xml
@@ -52,5 +52,7 @@
         android:layout_width="@dimen/dimension_200"
         android:layout_height="wrap_content"
         android:text="Enviar"
+        android:textColor="@color/background"
+        android:background="@drawable/red_button"
         android:layout_gravity="center_horizontal"/>
 </LinearLayout>
