--- a/app/src/main/res/layout/pizza_selected.xml
+++ b/app/src/main/res/layout/pizza_selected.xml
@@ -78,16 +78,16 @@
         android:background="@drawable/red_button"
         android:text="Ordenar"
         app:layout_constraintTop_toBottomOf="@id/medium"
-        app:layout_constraintBottom_toTopOf="@id/price"
+        app:layout_constraintBottom_toTopOf="@id/price_t"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
 
     <TextView
-        android:id="@+id/price"
+        android:id="@+id/price_t"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="total"
+        android:text="Total:"
         android:textSize="@dimen/fab_margin"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
