--- a/app/src/main/res/layout/splash_pay_screen.xml
+++ b/app/src/main/res/layout/splash_pay_screen.xml
@@ -1,36 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:tool="http://schemas.android.com/tools">
+
 
     <TextView
         android:id="@+id/Pay_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/dimension_40"
-        android:layout_marginTop="@dimen/margin_24"
-        android:text="@string/config"
+        android:text="Pedido Registrado"
         android:textStyle="bold"
         android:textSize="32dp"
         android:textColor="@color/design_default_color_primary"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/pay_gif"
         />
 
-    <Button
-        android:id="@+id/button_second"
-        android:layout_width="@dimen/dimension_336"
+    <ImageView
+        android:id="@+id/pay_gif"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/fab_marginx4"
-        android:background="@drawable/red_button"
-        android:text="@string/logout"
-        android:textColor="@color/background"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
+        app:layout_constraintTop_toBottomOf="@id/Pay_title"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tool:src="image pizza"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
