--- a/app/src/main/res/layout/end_order.xml
+++ b/app/src/main/res/layout/end_order.xml
@@ -30,6 +30,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         />
 
+    <Button
+        android:id="@+id/mapButton"
+        android:layout_marginVertical="@dimen/half_fab_margin"
+        android:layout_width="@dimen/dimension_200"
+        android:layout_height="@dimen/dimension_40"
+        android:textColor="@color/background"
+        android:background="@drawable/red_button"
+        android:text="Mapa"
+        android:layout_marginTop="@dimen/dimension_144"
+        app:layout_constraintTop_toBottomOf="@id/pizza_box"
+        app:layout_constraintBottom_toTopOf="@id/address"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
     <TextView
         android:id="@+id/address"
         android:layout_width="match_parent"
