--- a/app/src/main/res/layout/pizza_selected.xml
+++ b/app/src/main/res/layout/pizza_selected.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/half_fab_margin"
-        android:text="Escoge el tamanho"
+        android:text="@string/chooseSize"
         android:textSize="@dimen/fab_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
         android:layout_width="@dimen/dimension_48"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimension_144"
-        android:text="S"
+        android:text="@string/smallL"
         android:textSize="@dimen/fab_margin"
         android:background="@drawable/circle_button"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +49,7 @@
         android:layout_width="@dimen/dimension_48"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimension_144"
-        android:text="M"
+        android:text="@string/mediumL"
         android:textSize="@dimen/fab_margin"
         android:background="@drawable/circle_button"
         app:layout_constraintStart_toEndOf="@id/small"
@@ -61,7 +61,7 @@
         android:layout_width="@dimen/dimension_48"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimension_144"
-        android:text="L"
+        android:text="@string/largeL"
         android:textSize="@dimen/fab_margin"
         android:background="@drawable/circle_button"
         app:layout_constraintTop_toBottomOf="@id/pizza_image"
@@ -76,7 +76,7 @@
         android:layout_height="@dimen/dimension_40"
         android:textColor="@color/background"
         android:background="@drawable/red_button"
-        android:text="Ordenar"
+        android:text="@string/order"
         app:layout_constraintTop_toBottomOf="@id/medium"
         app:layout_constraintBottom_toTopOf="@id/price_t"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +87,7 @@
         android:id="@+id/price_t"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Total:"
+        android:text="@string/total2"
         android:textSize="@dimen/fab_margin"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
