--- a/app/src/main/res/layout/splash_pay_screen.xml
+++ b/app/src/main/res/layout/splash_pay_screen.xml
@@ -10,9 +10,9 @@
         android:id="@+id/Pay_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pedido Registrado"
+        android:text="@string/splash_pedido"
         android:textStyle="bold"
-        android:textSize="32dp"
+        android:textSize="@dimen/text_32"
         android:textColor="@color/design_default_color_primary"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
