--- a/app/src/main/res/layout/end_order.xml
+++ b/app/src/main/res/layout/end_order.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/half_fab_margin"
-        android:text="Finalizar Pedido"
+        android:text="@string/finPedido"
         android:textSize="@dimen/fab_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/fab_margin"
-        android:text="Direccion:"
+        android:text="@string/address"
         android:layout_marginTop="@dimen/fab_marginx4"
         app:layout_constraintTop_toBottomOf="@+id/pizza_box"
         app:layout_constraintBottom_toTopOf="@id/pay_method"
@@ -48,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/fab_margin"
-        android:text="Medio de Pago:"
+        android:text="@string/payment"
         app:layout_constraintTop_toBottomOf="@id/address"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +61,7 @@
         android:layout_height="@dimen/dimension_40"
         android:textColor="@color/background"
         android:background="@drawable/red_button"
-        android:text="Pagar"
+        android:text="@string/pay"
         android:layout_marginTop="@dimen/dimension_144"
         app:layout_constraintTop_toBottomOf="@id/pay_method"
         app:layout_constraintBottom_toTopOf="@id/total"
@@ -73,7 +73,7 @@
         android:id="@+id/total"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="total"
+        android:text="@string/total"
         android:textSize="@dimen/fab_margin"
         android:textAlignment="center"
         android:padding="@dimen/fab_margin"
