--- a/app/src/main/res/layout/fragment_crear_pizza.xml
+++ b/app/src/main/res/layout/fragment_crear_pizza.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/half_fab_margin"
-        android:text="Tipo de masa" />
+        android:text="@string/doughType" />
 
     <RadioGroup
         android:id="@+id/rg_masa"
@@ -22,15 +22,15 @@
             android:id="@+id/rb_gruesa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/fab_margin"
-            android:text="Gruesa"/>
+            android:layout_marginStart="@dimen/fab_margin"
+            android:text="@string/thiccDough"/>
 
         <RadioButton
             android:id="@+id/rb_delgada"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/fab_margin"
-            android:text="Delgada"/>
+            android:layout_marginStart="@dimen/fab_margin"
+            android:text="@string/thinDough"/>
 
     </RadioGroup>
 
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/half_fab_margin"
-        android:text="Ingredientes"/>
+        android:text="@string/ingredients"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/Reciclerview_Ingr"
@@ -51,7 +51,7 @@
         android:id="@+id/btn_enviar"
         android:layout_width="@dimen/dimension_200"
         android:layout_height="wrap_content"
-        android:text="Enviar"
+        android:text="@string/send"
         android:textColor="@color/background"
         android:background="@drawable/red_button"
         android:layout_gravity="center_horizontal"/>
