--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -61,7 +61,7 @@
             android:id="@+id/string_create_account"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/half_fab_margin"
+            android:layout_marginStart="@dimen/half_fab_margin"
             android:text="@string/createA" />
 
         <TextView
