--- a/app/src/main/res/layout/main_page.xml
+++ b/app/src/main/res/layout/main_page.xml
@@ -10,12 +10,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <TextView
             android:id="@+id/crea_tupizza_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dimension_40"
+            android:layout_marginStart="@dimen/dimension_40"
             android:layout_marginTop="@dimen/margin_24"
             android:text="@string/pizza_create"
             android:textStyle="bold"
@@ -35,7 +35,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/crea_tupizza_label"
-
             />
 
         <Button
@@ -49,7 +48,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:textColor="@color/background"
             android:background="@drawable/red_button"
-            android:text="Crear Pizza"/>
+            android:text="@string/createPizza"/>
 
         <TextView
             android:id="@+id/favorite_label"
