--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/Login">
+    app:startDestination="@id/start_screen">
+
+    <fragment
+        android:id="@+id/start_screen"
+        android:name="com.example.mypizza.ui.fragments.SplashStartScreen"
+        android:label="SplashStart"
+        tools:layout="@layout/splash_start_screen">
+
+        <action
+            android:id="@+id/toLogin"
+            app:destination="@id/Login"/>
+
+    </fragment>
 
     <fragment
         android:id="@+id/Login"
