--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_margin">16sp</dimen>
     <dimen name="Card_elevation">4dp</dimen>
     <dimen name="half_fab_margin">8dp</dimen>
     <dimen name="image_dimen">150dp</dimen>
@@ -14,4 +14,5 @@
     <dimen name="dimension_144">144dp</dimen>
     <dimen name="fab_marginx4">64dp</dimen>
     <dimen name="dimension_48">48dp</dimen>
+    <dimen name="text_32" >32sp</dimen>
 </resources>
